# ohpeehmel

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  prompt.txt  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml  uv-pytest-coverage.yml  uv-pytest.yml  uv-ruff-linter.yml
src/: main.py
src/models/: feed.py
src/services/: feed_manager.py  feed_validator.py  genre_detector.py
src/ui/: display.py
src/utils/: logger.py  xml_helpers.py
tests/models/: test_feed.py
tests/services/: test_feed_manager.py  test_feed_validator.py  test_genre_detector.py
tests/ui/: test_display.py
tests/utils/: test_xml_helpers.py
