[project]
name = "ohpeehmel"
version = "0.1.0"
description = "a simple opml parser, and manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.8",
    "feedparser>=6.0.11",
    "listparser>=0.20",
    "rich>=13.9.4",
    "ruff>=0.0.1",
    "pytest>=6.2.5",
    "pre-commit>=2.15.0",
    "pytest-cov>=6.0.0",
]
